# agentlair-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/agentlair/: __init__.py  _http.py  _types.py  account.py  budget.py  calendar.py  client.py  email.py  errors.py  events.py  observations.py  stacks.py  trust.py  vault.py
tests/: conftest.py  test_account.py  test_budget.py  test_client.py  test_email.py  test_errors.py  test_events.py  test_trust.py  test_vault.py
