[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentlair"
version = "0.1.0"
description = "Python SDK for AgentLair — identity, email, vault, trust, and budget for autonomous agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "AgentLair", email = "hello@agentlair.dev" }]
keywords = ["agents", "ai", "trust", "identity", "email", "vault"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Framework :: AsyncIO",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["httpx>=0.25.0"]

[project.urls]
Homepage = "https://agentlair.dev"
Documentation = "https://agentlair.dev/docs"
Repository = "https://github.com/piiiico/agentlair-python"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "respx>=0.21"]

[tool.hatch.build.targets.wheel]
packages = ["src/agentlair"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
